--- a/static/scss/_utilities.scss
+++ b/static/scss/_utilities.scss
@@ -1092,7 +1092,7 @@ object, embed, video {
   }
   .wsactive {
     .wsmenucontainer {
-      margin-left: 240px;
+      margin-left: 100%;
       -webkit-transition: all 0.25s ease-in-out;
       -moz-transition: all 0.25s ease-in-out;
       -o-transition: all 0.25s ease-in-out;
