--- a/static/scss/_grid.scss
+++ b/static/scss/_grid.scss
@@ -44,7 +44,7 @@ html, body {
     }
   }
 }
-@media only screen and (min-width: 990px) {
+@media only screen and (min-width: 992px) {
   .wsmenu>.wsmenu-list>li>.wsmegamenu {
     padding: 1rem 0 1rem !important;
   }
@@ -53,7 +53,7 @@ html, body {
   }
 }
 @media only screen and (max-width: 991px) {
-  .wsmenu>.wsmenu-list>li.sml-connection {
+  .wsactive .wsmenu>.wsmenu-list>li.sml-connection {
     display: block;
     .sub-menu {
       li {
@@ -191,11 +191,11 @@ html, body {
   .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
     bottom: 25px;
   }
-
   .swiper-slide {
     min-height: 550px;
     background-size: cover;
     background-position: center;
+    background-position: 50% 50%;
     .item {
       position: absolute;
       bottom: 7rem;
